--- a/meetvers.io/src/stylesheets/typography.scss
+++ b/meetvers.io/src/stylesheets/typography.scss
@@ -25,38 +25,112 @@ body {
   text-rendering: geometricPrecision;
 }
 
+h1, h2 {
+  font-family: 'VT323', monospace;
+}
+
+h1 {
+  font-size: 34px;
+  text-transform: uppercase;
+  margin-bottom: 0;
+}
+
+h2 {
+  font-size: 24px;
+}
+
+h3 {
+  font-size: 22px;
+  font-weight: 700;
+  line-height: 40px;
+}
+
+p {
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 24px;
+}
+
+a {
+  font-family: Inter, sans-serif;
+}
+
+.title__prefix {
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 16px;
+}
 
 @media screen and (min-width: 1024px) {
   h1 {
-    font-family: 'VT323', monospace;
     font-size: 96px;
     font-weight: 400;
     line-height: 96px;
-    text-transform: uppercase;
-    margin-bottom: 0;
   }
   h2 {
-    font-family: 'VT323', monospace;
     font-size: 60px;
     font-weight: 400;
     line-height: 60px;
   }
-
-  h3 {
-    font-size: 22px;
-    font-weight: 700;
-    line-height: 40px;
-  }
-
   p {
     font-size: 22px;
-    font-weight: 400;
     line-height: 35px;
   }
-
-  .title__prefix {
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 16px;
+}
+@media screen and (max-width: 1023px) {
+  li {
+    font-size: 18px;
   }
 }
+
+// Button
+.wrapper {
+  padding: 1.5rem 0;
+  filter: url('#goo');
+}
+
+.button {
+  font-size: 1.25rem;
+  font-weight: bold;
+  color: var(--dark-grey);
+  background: var(--primary);
+  text-decoration: none;
+  text-align: center;
+  display: inline-block;
+  padding: 1.18em 1.82em 1.03em;
+  line-height: 1;
+  border-radius: 1em;
+  position: relative;
+  min-width: 8.23em;
+}
+
+.button:before,
+.button:after {
+  width: 4.4em;
+  height: 2.95em;
+  position: absolute;
+  content: "";
+  display: inline-block;
+  background: var(--primary);
+  border-radius: 50%;
+  transition: transform 1s ease;
+  transform: scale(0);
+  z-index: -1;
+}
+
+.button:before {
+  top: -25%;
+  left: 20%;
+}
+
+.button:after {
+  bottom: -25%;
+  right: 20%;
+}
+
+.button:hover:before,
+.button:hover:after {
+  transform: none;
+}
+
+//
