--- a/meetvers.io/src/html/shared/header.njk
+++ b/meetvers.io/src/html/shared/header.njk
@@ -103,10 +103,9 @@
         <div class="nav-wrapper">
           <button id="menu-btn" class="btn btn--menu" aria-expanded="false" aria-controls="menu"
                   aria-label="Open nav">
-            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" fill="#000000">
-              <path d="M0 0h24v24H0z" fill="none"/>
-              <path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"/>
-            </svg>
+            <div class="hamburger__bar"></div>
+            <div class="hamburger__bar"></div>
+            <div class="hamburger__bar"></div>
           </button>
           <ul class="nav-links" id="menu">
             <li role="none">
