Meetvers - flipclock css + html + js

--- a/meetvers.io/src/html/index.njk
+++ b/meetvers.io/src/html/index.njk
@@ -45,11 +45,9 @@
           <p>Your game-changing, blockchain-based, decentralized, and tokenized social
             network of the&nbsp;future</p>
         </div>
-        <div class="timer mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-          <h2>Meetvers utility token release in:</h2>
-          <p>Be part of the social network revolution<br>
-            Be part of Meetvers</p>
-        </div>
+
+        {% include 'components/flipclock.njk' %}
+
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <!-- Button -->
           <div class="wrapper">
@@ -476,12 +474,12 @@
           </div>
           <div class="contentBx">
             <div class="label-content">
-            <div class="label">How can I now support this project?</div>
-            <div class="label-icon">
-              <svg width="25" height="16" viewBox="0 0 25 16" fill="white" xmlns="http://www.w3.org/2000/svg">
-                <path d="M2.9375 0L12.5 9.88934L22.0625 0L25 3.04453L12.5 16L0 3.04453L2.9375 0Z" fill="white"/>
-              </svg>
-            </div>
+              <div class="label">How can I now support this project?</div>
+              <div class="label-icon">
+                <svg width="25" height="16" viewBox="0 0 25 16" fill="white" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M2.9375 0L12.5 9.88934L22.0625 0L25 3.04453L12.5 16L0 3.04453L2.9375 0Z" fill="white"/>
+                </svg>
+              </div>
             </div>
             <div class="content">
               <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean a pellentesque erat. Nullam tempus,
