Meetvers - fixing website issues - lighthouses
Adding title of the website
Deleting "role" attributes from <a> elements

--- a/meetvers.io/src/html/layouts/topmonks.njk
+++ b/meetvers.io/src/html/layouts/topmonks.njk
@@ -1,6 +1,7 @@
 {% from '../macros/helpers.njk' import spriteTarget %}
 <!doctype html>
 <html lang="en">
+{% block title %} Meetvers {% endblock %}
 
 {% block head %}
   <meta charset="utf-8">
