--- a/meetvers.io/src/html/shared/header.njk
+++ b/meetvers.io/src/html/shared/header.njk
@@ -109,32 +109,32 @@
           </button>
           <ul class="nav-links" id="menu">
             <li role="none">
-              <a role="menuitem" href="/" class="nav-link btn">
+              <a href="/" class="nav-link btn">
                 Home
               </a>
             </li>
             <li role="none">
-              <a role="menuitem" href="#" class="nav-link btn">
+              <a href="#" class="nav-link btn">
                 About Meetvers
               </a>
             </li>
             <li role="none">
-              <a role="menuitem" href="#" class="nav-link btn">
+              <a href="#" class="nav-link btn">
                 Social Network
               </a>
             </li>
             <li role="none">
-              <a role="menuitem" href="#" class="nav-link btn">
+              <a href="#" class="nav-link btn">
                 Meetvers Token
               </a>
             </li>
             <li role="none">
-              <a role="menuitem" href="#" class="nav-link btn">
+              <a href="#" class="nav-link btn">
                 We Answer
               </a>
             </li>
             <li role="none">
-              <a role="menuitem" href="#" class="nav-link btn btn--accent">
+              <a href="#" class="nav-link btn btn--accent">
                 Contact
               </a>
             </li>
