Meetvers - flipclock css + html + js

--- a/meetvers.io/src/html/components/flipclock.njk
+++ b/meetvers.io/src/html/components/flipclock.njk
@@ -1,230 +1,226 @@
 <link rel="stylesheet" href="/assets/css/flipclock.css">
+<script src="/assets/js/index.js"></script>
 
-<div class="timer mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-  <h2>Meetvers utility token release in:</h2>
-  <div class="clock flip-clock-wrapper">
+<div class="clock flip-clock-wrapper mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
       <span class="flip-clock-divider days">
         <span class="flip-clock-label">Days</span>
       </span>
-    <ul class="flip">
-      <li class="flip-clock-before">
-        <a href="#">
-          <div class="up">
-            <div class="shadow"></div>
-            <div class="inn">9</div>
-          </div>
-          <div class="down">
-            <div class="shadow"></div>
-            <div class="inn">9</div>
-          </div>
-        </a>
-      </li>
-      <li class="flip-clock-active">
-        <a href="#">
-          <div class="up">
-            <div class="shadow"></div>
-            <div class="inn">0</div>
-          </div>
-          <div class="down">
-            <div class="shadow"></div>
-            <div class="inn">0</div>
-          </div>
-        </a>
-      </li>
-    </ul>
-    <ul class="flip">
-      <li class="flip-clock-before">
-        <a href="#">
-          <div class="up">
-            <div class="shadow"></div>
-            <div class="inn">0</div>
-          </div>
-          <div class="down">
-            <div class="shadow"></div>
-            <div class="inn">0</div>
-          </div>
-        </a>
-      </li>
-      <li class="flip-clock-active">
-        <a href="#">
-          <div class="up">
-            <div class="shadow"></div>
-            <div class="inn">2</div>
-          </div>
-          <div class="down">
-            <div class="shadow"></div>
-            <div class="inn">2</div>
-          </div>
-        </a>
-      </li>
-    </ul>
-    <span class="flip-clock-divider hours">
+  <ul class="flip">
+    <li class="flip-clock-before">
+      <a href="#">
+        <div class="up">
+          <div class="shadow"></div>
+          <div class="inn">9</div>
+        </div>
+        <div class="down">
+          <div class="shadow"></div>
+          <div class="inn">9</div>
+        </div>
+      </a>
+    </li>
+    <li class="flip-clock-active">
+      <a href="#">
+        <div class="up">
+          <div class="shadow"></div>
+          <div class="inn">0</div>
+        </div>
+        <div class="down">
+          <div class="shadow"></div>
+          <div class="inn">0</div>
+        </div>
+      </a>
+    </li>
+  </ul>
+  <ul class="flip">
+    <li class="flip-clock-before">
+      <a href="#">
+        <div class="up">
+          <div class="shadow"></div>
+          <div class="inn">0</div>
+        </div>
+        <div class="down">
+          <div class="shadow"></div>
+          <div class="inn">0</div>
+        </div>
+      </a>
+    </li>
+    <li class="flip-clock-active">
+      <a href="#">
+        <div class="up">
+          <div class="shadow"></div>
+          <div class="inn">2</div>
+        </div>
+        <div class="down">
+          <div class="shadow"></div>
+          <div class="inn">2</div>
+        </div>
+      </a>
+    </li>
+  </ul>
+  <span class="flip-clock-divider hours">
         <span class="flip-clock-label">Hours</span>
       </span>
-    <ul class="flip">
-      <li class="flip-clock-before">
-        <a href="#">
-          <div class="up">
-            <div class="shadow"></div>
-            <div class="inn">0</div>
-          </div>
-          <div class="down">
-            <div class="shadow"></div>
-            <div class="inn">0</div>
-          </div>
-        </a>
-      </li>
-      <li class="flip-clock-active">
-        <a href="#">
-          <div class="up">
-            <div class="shadow"></div>
-            <div class="inn">1</div>
-          </div>
-          <div class="down">
-            <div class="shadow"></div>
-            <div class="inn">1</div>
-          </div>
-        </a>
-      </li>
-    </ul>
-    <ul class="flip">
-      <li class="flip-clock-before">
-        <a href="#">
-          <div class="up">
-            <div class="shadow"></div>
-            <div class="inn">0</div>
-          </div>
-          <div class="down">
-            <div class="shadow"></div>
-            <div class="inn">0</div>
-          </div>
-        </a>
-      </li>
-      <li class="flip-clock-active">
-        <a href="#">
-          <div class="up">
-            <div class="shadow"></div>
-            <div class="inn">3</div>
-          </div>
-          <div class="down">
-            <div class="shadow"></div>
-            <div class="inn">3</div>
-          </div>
-        </a>
-      </li>
-    </ul>
-    <span class="flip-clock-divider minutes">
+  <ul class="flip">
+    <li class="flip-clock-before">
+      <a href="#">
+        <div class="up">
+          <div class="shadow"></div>
+          <div class="inn">0</div>
+        </div>
+        <div class="down">
+          <div class="shadow"></div>
+          <div class="inn">0</div>
+        </div>
+      </a>
+    </li>
+    <li class="flip-clock-active">
+      <a href="#">
+        <div class="up">
+          <div class="shadow"></div>
+          <div class="inn">1</div>
+        </div>
+        <div class="down">
+          <div class="shadow"></div>
+          <div class="inn">1</div>
+        </div>
+      </a>
+    </li>
+  </ul>
+  <ul class="flip">
+    <li class="flip-clock-before">
+      <a href="#">
+        <div class="up">
+          <div class="shadow"></div>
+          <div class="inn">0</div>
+        </div>
+        <div class="down">
+          <div class="shadow"></div>
+          <div class="inn">0</div>
+        </div>
+      </a>
+    </li>
+    <li class="flip-clock-active">
+      <a href="#">
+        <div class="up">
+          <div class="shadow"></div>
+          <div class="inn">3</div>
+        </div>
+        <div class="down">
+          <div class="shadow"></div>
+          <div class="inn">3</div>
+        </div>
+      </a>
+    </li>
+  </ul>
+  <span class="flip-clock-divider minutes">
         <span class="flip-clock-label">Minutes</span>
       </span>
-    <ul class="flip">
-      <li class="flip-clock-before">
-        <a href="#">
-          <div class="up">
-            <div class="shadow"></div>
-            <div class="inn">0</div>
-          </div>
-          <div class="down">
-            <div class="shadow"></div>
-            <div class="inn">0</div>
-          </div>
-        </a>
-      </li>
-      <li class="flip-clock-active">
-        <a href="#">
-          <div class="up">
-            <div class="shadow"></div>
-            <div class="inn">2</div>
-          </div>
-          <div class="down">
-            <div class="shadow"></div>
-            <div class="inn">2</div>
-          </div>
-        </a>
-      </li>
-    </ul>
-    <ul class="flip">
-      <li class="flip-clock-before">
-        <a href="#">
-          <div class="up">
-            <div class="shadow"></div>
-            <div class="inn">0</div>
-          </div>
-          <div class="down">
-            <div class="shadow"></div>
-            <div class="inn">0</div>
-          </div>
-        </a>
-      </li>
-      <li class="flip-clock-active">
-        <a href="#">
-          <div class="up">
-            <div class="shadow"></div>
-            <div class="inn">1</div>
-          </div>
-          <div class="down">
-            <div class="shadow"></div>
-            <div class="inn">1</div>
-          </div>
-        </a>
-      </li>
-    </ul>
-    <span class="flip-clock-divider seconds">
+  <ul class="flip">
+    <li class="flip-clock-before">
+      <a href="#">
+        <div class="up">
+          <div class="shadow"></div>
+          <div class="inn">0</div>
+        </div>
+        <div class="down">
+          <div class="shadow"></div>
+          <div class="inn">0</div>
+        </div>
+      </a>
+    </li>
+    <li class="flip-clock-active">
+      <a href="#">
+        <div class="up">
+          <div class="shadow"></div>
+          <div class="inn">2</div>
+        </div>
+        <div class="down">
+          <div class="shadow"></div>
+          <div class="inn">2</div>
+        </div>
+      </a>
+    </li>
+  </ul>
+  <ul class="flip">
+    <li class="flip-clock-before">
+      <a href="#">
+        <div class="up">
+          <div class="shadow"></div>
+          <div class="inn">0</div>
+        </div>
+        <div class="down">
+          <div class="shadow"></div>
+          <div class="inn">0</div>
+        </div>
+      </a>
+    </li>
+    <li class="flip-clock-active">
+      <a href="#">
+        <div class="up">
+          <div class="shadow"></div>
+          <div class="inn">1</div>
+        </div>
+        <div class="down">
+          <div class="shadow"></div>
+          <div class="inn">1</div>
+        </div>
+      </a>
+    </li>
+  </ul>
+  <span class="flip-clock-divider seconds">
         <span class="flip-clock-label">Seconds</span>
       </span>
-    <ul class="flip play">
-      <li class="flip-clock-before">
-        <a href="#">
-          <div class="up">
-            <div class="shadow"></div>
-            <div class="inn">1</div>
-          </div>
-          <div class="down">
-            <div class="shadow"></div>
-            <div class="inn">1</div>
-          </div>
-        </a>
-      </li>
-      <li class="flip-clock-active">
-        <a href="#">
-          <div class="up">
-            <div class="shadow"></div>
-            <div class="inn">0</div>
-          </div>
-          <div class="down">
-            <div class="shadow"></div>
-            <div class="inn">0</div>
-          </div>
-        </a>
-      </li>
-    </ul>
-    <ul class="flip play">
-      <li class="flip-clock-before">
-        <a href="#">
-          <div class="up">
-            <div class="shadow"></div>
-            <div class="inn">9</div>
-          </div>
-          <div class="down">
-            <div class="shadow"></div>
-            <div class="inn">9</div>
-          </div>
-        </a>
-      </li>
-      <li class="flip-clock-active">
-        <a href="#">
-          <div class="up">
-            <div class="shadow"></div>
-            <div class="inn">8</div>
-          </div>
-          <div class="down">
-            <div class="shadow"></div>
-            <div class="inn">8</div>
-          </div>
-        </a>
-      </li>
-    </ul>
-  </div>
-  <div class="message"></div>
-  <p>Be part of the social network revolution<br>
-    Be part of Meetvers</p>
+  <ul class="flip play">
+    <li class="flip-clock-before">
+      <a href="#">
+        <div class="up">
+          <div class="shadow"></div>
+          <div class="inn">1</div>
+        </div>
+        <div class="down">
+          <div class="shadow"></div>
+          <div class="inn">1</div>
+        </div>
+      </a>
+    </li>
+    <li class="flip-clock-active">
+      <a href="#">
+        <div class="up">
+          <div class="shadow"></div>
+          <div class="inn">0</div>
+        </div>
+        <div class="down">
+          <div class="shadow"></div>
+          <div class="inn">0</div>
+        </div>
+      </a>
+    </li>
+  </ul>
+  <ul class="flip play">
+    <li class="flip-clock-before">
+      <a href="#">
+        <div class="up">
+          <div class="shadow"></div>
+          <div class="inn">9</div>
+        </div>
+        <div class="down">
+          <div class="shadow"></div>
+          <div class="inn">9</div>
+        </div>
+      </a>
+    </li>
+    <li class="flip-clock-active">
+      <a href="#">
+        <div class="up">
+          <div class="shadow"></div>
+          <div class="inn">8</div>
+        </div>
+        <div class="down">
+          <div class="shadow"></div>
+          <div class="inn">8</div>
+        </div>
+      </a>
+    </li>
+  </ul>
 </div>
+<div class="message mdc-layout-grid__cell mdc-layout-grid__cell--span-12"></div>
