--- a/meetvers.io/src/stylesheets/flipclock.scss
+++ b/meetvers.io/src/stylesheets/flipclock.scss
@@ -34,7 +34,7 @@
 .flip-clock-wrapper a {
   cursor: pointer;
   text-decoration: none;
-  color: var(--secondary); }
+  color: #ccc; }
 
 .flip-clock-wrapper a:hover {
   color: #fff; }
@@ -55,7 +55,7 @@
 
 /* Main */
 .flip-clock-wrapper {
-  font: normal 11px 'Inter', sans-serif;
+  font: normal 11px "Helvetica Neue", Helvetica, sans-serif;
   -webkit-user-select: none; }
 
 .flip-clock-meridium {
@@ -69,7 +69,7 @@
   text-align: center;
   position: relative;
   width: 100%;
-  margin: 1em 0;
+  margin: 1em;
 }
 
 .flip-clock-wrapper:before,
@@ -92,7 +92,7 @@
   font-weight: bold;
   line-height: 87px;
   border-radius: 6px;
-  background: var(--primary);
+  background: #000;
 }
 
 .flip-clock-wrapper ul li {
@@ -171,10 +171,10 @@
   z-index: 1;
   width: 100%;
   height: 200%;
- color: var(--secondary);
+  color: #ccc;
   text-shadow: 0 1px 2px #000;
   text-align: center;
-  background-color: var(--primary);
+  background-color: #333;
   border-radius: 6px;
   font-size: 70px; }
 
@@ -217,11 +217,10 @@
   left: 5px; }
 
 .flip-clock-divider .flip-clock-label {
-  font-family: 'VT323', sans-serif;
   position: absolute;
   top: -1.5em;
   right: -86px;
-  color: var(--primary);
+  color: black;
   text-shadow: none; }
 
 .flip-clock-divider.minutes .flip-clock-label {
