--- a/meetvers.io/src/html/components/flipclock.njk
+++ b/meetvers.io/src/html/components/flipclock.njk
@@ -1,4 +1,8 @@
 <link rel="stylesheet" href="/assets/css/flipclock.css">
+
+<div class="timer mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+  <h2>Meetvers utility token release in:</h2>
+</div>
 <div class="clock flip-clock-wrapper mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
       <span class="flip-clock-divider days">
         <span class="flip-clock-label">Days</span>
@@ -222,6 +226,11 @@
   </ul>
 </div>
 <div class="message mdc-layout-grid__cell mdc-layout-grid__cell--span-12"></div>
+<div class="timer mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+  <p>Be part of the social network revolution<br>
+    Be part of Meetvers</p>
+</div>
+<script src="https://code.jquery.com/jquery-3.6.0.slim.min.js"></script>
 <script>
   var clock;
 
