Meetvers - stylizace footer navigation + přidání ID na sekce

--- a/meetvers.io/src/html/index.njk
+++ b/meetvers.io/src/html/index.njk
@@ -65,7 +65,7 @@
       </div>
     </div>
   </section>
-  <section class="about">
+  <section id="about" class="about">
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner layout-wrapper">
         <div class="about__content mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
@@ -145,7 +145,7 @@
       </div>
     </div>
   </section>
-  <section class="network">
+  <section id="network" class="network">
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner layout-wrapper">
         <div class="network__list mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet">
@@ -258,7 +258,7 @@
       </div>
     </div>
   </section>
-  <section class="token">
+  <section id="token" class="token">
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner layout-wrapper">
         <div class="token__intro mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
@@ -415,7 +415,7 @@
       </div>
     </div>
   </section>
-  <section class="faq">
+  <section id="faq" class="faq">
     <div class="mdc-layout-grid">
       <div class="mdc-layout-grid__inner layout-wrapper">
         <div class="faq__intro mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
@@ -433,9 +433,13 @@
               </div>
             </div>
             <div class="content">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean a pellentesque erat. Nullam tempus,
-                mauris a euismod tincidunt, purus quam viverra metus, eu commodo metus sem vel nunc. Nullam mattis lacus
-                nec accumsan ultricies.</p>
+              <p>Meetvers is our vision of a starting point in the metaverse, a place to meet
+                others in the metaverse, and a place where no one has to worry about their
+                privacy or personality being violated. It is our vision of a Web 3.0&nbsp;social
+                network, based on totally different principles and values than current social
+                networks have. Among our fundamental principles and values are: tokenization,
+                decentralization, transparency, security, and compliance. With all of this,
+                Meetvers is ready to disrupt the technological sector!</p>
             </div>
           </div>
           <div class="contentBx">
@@ -448,9 +452,49 @@
               </div>
             </div>
             <div class="content">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean a pellentesque erat. Nullam tempus,
-                mauris a euismod tincidunt, purus quam viverra metus, eu commodo metus sem vel nunc. Nullam mattis lacus
-                nec accumsan ultricies.</p>
+              <p>Meetvers token (symbol: MIO) is an ERC-20&nbsp;token built on Polygon. It is the
+                only utility token of the Meetvers social network. There is a total supply of
+                1&nbsp;000&nbsp;000&nbsp;000&nbsp;MIO tokens, and those would be redeemable for various services
+                on our platform, especially those built around the AAN system. In the first
+                phase (before we launch the alpha version of our platform), people can stake
+                their holdings to receive their share on the vesting allocation (37,5&nbsp;% of
+                total supply).</p>
+            </div>
+          </div>
+          <div class="contentBx">
+            <div class="label-content">
+              <div class="label">How do I&nbsp;acquire MIO tokens?</div>
+              <div class="label-icon">
+                <svg width="25" height="16" viewBox="0 0 25 16" fill="white" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M2.9375 0L12.5 9.88934L22.0625 0L25 3.04453L12.5 16L0 3.04453L2.9375 0Z" fill="white"/>
+                </svg>
+              </div>
+            </div>
+            <div class="content">
+              <p>Currently, the MIO token is in its pre-sale phase. Acquiring MIO tokens will
+                be possible at the beginning of June on QuickSwap. With each buy and sell, there
+                comes a 5&nbsp;% cut into the treasury, which will be used for the alpha platform
+                development. For more info, please contact us at <a
+                  href="mailto:public@meetvers.io">public@meetvers.io</a>.</p>
+
+            </div>
+          </div>
+          <div class="contentBx">
+            <div class="label-content">
+              <div class="label">What is the AAN?</div>
+              <div class="label-icon">
+                <svg width="25" height="16" viewBox="0 0 25 16" fill="white" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M2.9375 0L12.5 9.88934L22.0625 0L25 3.04453L12.5 16L0 3.04453L2.9375 0Z" fill="white"/>
+                </svg>
+              </div>
+            </div>
+            <div class="content">
+              <p>AAN is our unique approach to networking. Just like in real life, most of the
+                impactful encounters are random. Unlike other social networks, we do not want to
+                build artificial connections, rather, we let the blockchain do its job. At
+                Meetvers, people will be automatically matched into groups and communities based
+                on their blockchain activity. No more bots, no more spam groups, just genuine
+                connections.</p>
             </div>
           </div>
           <div class="contentBx">
@@ -463,14 +507,17 @@
               </div>
             </div>
             <div class="content">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean a pellentesque erat. Nullam tempus,
-                mauris a euismod tincidunt, purus quam viverra metus, eu commodo metus sem vel nunc. Nullam mattis lacus
-                nec accumsan ultricies.</p>
+              <p>Our road map is in the Meetvers Whitepaper, and we definitely recommend you
+                to read it! In the case of the MIO token, we plan to launch it and provide the
+                initial liquidity in June. So, don't forget to follow our social media to be
+                posted! In the case of the Meetvers platform, we are planning its alpha version
+                to be released in the third quarter of 2022.&nbsp;With the alpha platform launch,
+                there is going to be one of the biggest airdrops ever. We mean E.V.E.R.!</p>
             </div>
           </div>
           <div class="contentBx">
             <div class="label-content">
-              <div class="label">How can I now support this project?</div>
+              <div class="label">How can I&nbsp;now support this project?</div>
               <div class="label-icon">
                 <svg width="25" height="16" viewBox="0 0 25 16" fill="white" xmlns="http://www.w3.org/2000/svg">
                   <path d="M2.9375 0L12.5 9.88934L22.0625 0L25 3.04453L12.5 16L0 3.04453L2.9375 0Z" fill="white"/>
@@ -478,9 +525,12 @@
               </div>
             </div>
             <div class="content">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean a pellentesque erat. Nullam tempus,
-                mauris a euismod tincidunt, purus quam viverra metus, eu commodo metus sem vel nunc. Nullam mattis lacus
-                nec accumsan ultricies.</p>
+              <p>Glad you asked! We would be super delighted if you followed us on our social
+                media (mainly Twitter and Discord), even more if you told your friends about us.
+                If you are really into Meetvers, vest the Meetvers tokens and shill! Other than
+                that, all ideas are welcomed at <a
+                  href="mailto:public@meetvers.io">public@meetvers.io</a>.</p>
+
             </div>
           </div>
           <script>
