--- a/meetvers.io/src/html/shared/footer.njk
+++ b/meetvers.io/src/html/shared/footer.njk
@@ -78,7 +78,21 @@
             </filter>
           </defs>
         </svg>
-
+      </div>
+      <div class="navigation mdc-layout-grid__cell">
+        <h3>Navigation</h3>
+        <nav>
+          <ul>
+            <li><a href="#about">What meetvers</a></li>
+            <li><a href="#network">SOCIAL NETWORK</a></li>
+            <li><a href="#token">MEETVERS TOKEN</a></li>
+            <li><a href="#faq">WE ANSWER</a></li>
+            <li><a href="#">WHITEPAPER</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Cookies Policy</a></li>
+            <li><a href="#">Terms & Conditions</a></li>
+          </ul>
+        </nav>
       </div>
     </div>
   </div>
